# AITodoList

./: README.md
backend/: .env.example  pyproject.toml  todos.db
backend/app/: main.py
backend/app/api/: schema.py  stream.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
frontend/: README.md  components.json  index.html  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  main.tsx
frontend/src/components/: TodoItem.tsx
frontend/src/graphql/: mutations.ts  queries.ts
frontend/src/lib/: apollo.ts
